--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 <head>
 {% include head.html %}
 </head>
-<body data-gnl="sütun">
+<body data-gnl="sütun" class="bg">
   <header data-gnl="24" class="header">
   {% include header.html %}
   </header>
