--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -61,7 +61,7 @@
     :root{
       --yazı-biçimi: 'Roboto', sans-serif;
       --yazı-boyutu: 15px;
-      --yazi-rengi: #333;
+      --yazı-rengi: #333;
 
       --aralık: 5px;
       --oluk: 5px;
