--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -7,6 +7,9 @@
 	width: 100%;
 	overflow-x: auto;
 }*/
+.bg{
+	background-image: url(assets/img/bg.svg),linear-gradient(#2c2171, #292070 15%);
+}
 .header{min-height: 72px;}
 #header{
 	background-color: #2c2171;
