--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -128,7 +128,7 @@ a.logo{
 }
 .ap-kara	{background-color:#222;}
 .ap-deniz	{background-color: #17C4BB;}
-.ap-deveb	{background-color: #2c2171;}
+.ap-deveb	{background-color: #7c71f1;opacity: 0.3;}
 .ap-yesil	{background-color: #00BF6F;}
 
 .kenar-alt{border-bottom:1px solid #eceeef;-webkit-box-shadow: 0 2px 0 hsla(200,9%,93%,.25);
