--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,14 +3,12 @@
 <head>
 {% include head.html %}
 </head>
-<body data-gnl="sütun" class="bg">
-  <header data-gnl="24" class="header">
-  {% include header.html %}
-  </header>
-  <div data-gnl="23 kaplama">
+<body data-gnl="göbekte" class="bg" style="min-height:100vh;">
+
+  <div data-gnl="23 24p kaplama">
   {{ content }}
   </div>
-  <footer data-gnl="24">
+  <footer data-gnl="24 24p altta-ol">
   {% include foot.html %}
   </footer>
 </body>
