--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,15 @@
   <header data-gnl="24" class="header">
   {% include header.html %}
   </header>
-  {% if page.title %}<div data-gnl="1 1p" class="sayfa-başlığı">
-    <h1 data-gnl="23 24p ortada ortada-ol">{{ page.title }}</h1>
-  </div>{% endif %}
-  <div data-gnl="23 göbekte-ol" data-ort="büyükleriyle-kaplama">
-    <div data-gnl="24" data-ort="4">
-    {% include icerik.html %}
-    </div>
-    <div data-gnl="24" data-ort="20">
-    {{ content }}
+  <div data-gnl="1g">
+    <div data-gnl="24 24p" data-kçk="4 24p">{% include icerik.html %}</div>
+    <div data-gnl="24 24p" data-kçk="20 24p">
+      {% if page.title %}
+      <div data-gnl="1 1p" class="sayfa-başlığı">
+        <h1 data-gnl="23 24p ortada ortada-ol">{{ page.title }}</h1>
+      </div>
+      {% endif %}
+      {{ content }}
     </div>
   </div>
   <footer data-gnl="24">
