--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -1283,7 +1283,7 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
   top:0;
 }
 [data-sekme~="sütun"] > label{
-  width:20%;
+  margin-bottom:5px;
 }
 [data-sekme~="sütun"][data-sekme~="sütun"] > div {
   display: flex;
