--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <header data-gnl="24" class="header">
   {% include header.html %}
   </header>
-  <div data-gnl="1g uzat">
+  <div data-gnl="1g uzat oluk-çevre">
     <div class="sol-bölge" data-gnl="24 24p" data-kçk="4 24p">{% include icerik.html %}</div>
     <div data-gnl="24 24p oluk" data-kçk="20 24p">
       {% if page.title %}
