--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,4 +1,4 @@
-<div class="beri-2" data-gnl="24 ortada göbekte">
+<div class="" data-gnl="24 ortada göbekte">
   <ul class="menü-genel">
     <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github"></i> Github </a></li>
     <li><a href="https://www.facebook.com/datadeveb/"> <i class="fa fa-facebook"></i> Facebook </a></li>
