--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
 {% include head.html %}
 </head>
-<body data-gnl="sütun">
-  <header data-gnl="24" class="header">
+<body data-gnl="sütun" style="max-height:100vh;">
+  <header data-gnl="24 24p" class="header">
   {% include header.html %}
   </header>
   <div data-gnl="1g uzat oluk-çevre" style="min-height:1px;">
